--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -10,12 +10,15 @@
     </thead>
     <tbody>
         <tr *ngFor="let course of courses">
+            <td><img src="{{course.imageUrl}}" width="40" height="40" /></td>
             <td>{{ course.imageUrl}}</td>
             <td>{{ course.name}}</td>
             <td>{{ course.price}}</td>
             <td>{{ course.code}}</td>
-            <td>{{ course.rating}}</td>
-        </tr>
-        <td></td>
+            <td>                
+                <app-star [rating]="course.rating"></app-star>
+            </td>
+            <td></td>
+        </tr>        
     </tbody>
 </table>
