--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -1,4 +1,12 @@
 <h2>Course List</h2>
+
+<div class="form-group row">
+    <label class="col-sm-2 col-from-label" for="">Filtro</label>
+    <div class="col-sm-10" >
+        <input [(ngModel)]="filter" class="form-control">
+    </div>
+</div>
+
 <table class="table table-striped">
     <thead>
         <th>Image</th>
@@ -9,9 +17,8 @@
         <th>Options</th>
     </thead>
     <tbody>
-        <tr *ngFor="let course of courses">
-            <td><img src="{{course.imageUrl}}" width="40" height="40" /></td>
-            <td>{{ course.imageUrl}}</td>
+        <tr *ngFor="let course of filteredCourses">
+            <td><img src="{{course.imageUrl}}" width="40" height="40" /></td>            
             <td>{{ course.name}}</td>
             <td>{{ course.price}}</td>
             <td>{{ course.code}}</td>
