--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -13,6 +13,7 @@
         <th>Name</th>
         <th>Price</th>
         <th>Code</th>
+        <th>Release Date</th>
         <th>Rating</th>
         <th>Options</th>
     </thead>
@@ -21,7 +22,8 @@
             <td><img src="{{course.imageUrl}}" width="40" height="40" /></td>            
             <td>{{ course.name}}</td>
             <td>{{ course.price}}</td>
-            <td>{{ course.code}}</td>
+            <td>{{ course.code | lowercase | replace: '-': ' '}}</td>
+            <td>{{ course.releaseDate | date: 'dd/mm/yyyy'}}</td>
             <td>                
                 <app-star [rating]="course.rating"></app-star>
             </td>
