--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -27,7 +27,9 @@
             <td>                
                 <app-star [rating]="course.rating"></app-star>
             </td>
-            <td></td>
+            <td>
+                <a [routerLink]="['/courses/info', course.id]" class="btn btn-primary">edit</a>
+            </td>
         </tr>        
     </tbody>
 </table>
