--- a/src/app/courses/course-info.component.html
+++ b/src/app/courses/course-info.component.html
@@ -1,3 +1,13 @@
 <h2>
     Course Id = {{ courseId }}
 </h2>
+<hr/>
+
+<form #courseForm="ngForm">
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Name:</label>
+            <div>
+                <!--<input [{ngModel}]="course.name" required name="name" #courseName="ngModel" [ngClass]="{'is-invalid': courseName.invalid}" class="form-control">-->
+            </div>        
+    </div>
+</form>
